<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ico"
                android:contentDescription="@string/home_icon_description"/>

            <LinearLayout
                android:id="@+id/albumListButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:paddingVertical="9dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/albumListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nunito_bold"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/albumes_title"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/albumForwardButton"
                    android:layout_width="25dp"
                    android:layout_marginTop="2dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:contentDescription="@string/album_detail_back"
                    android:src="@drawable/arrow_forward" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/performerListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="9dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/performerListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nunito_bold"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/performers_title"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/performerForwardButton"
                    android:layout_width="25dp"
                    android:layout_marginTop="2dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:contentDescription="@string/performer_forward_button"
                    android:src="@drawable/arrow_forward" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewArtist"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <LinearLayout
                android:id="@+id/collectorListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="9dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/collectorListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/nunito_bold"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/collectors_title"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/collectorForwardButton"
                    android:layout_width="25dp"
                    android:layout_marginTop="2dp"
                    android:layout_height="30dp"
                    android:background="@null"
                    android:contentDescription="@string/collectors_forward_button"
                    android:src="@drawable/arrow_forward" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCollector"
                android:layout_width="match_parent"
                android:layout_height="260dp"/>
        </LinearLayout>
    </ScrollView>
</layout>
